Revised Footer Links -- Fixed CSS overflow bug

--- a/client/css/typeography.css
+++ b/client/css/typeography.css
@@ -75,7 +75,6 @@ i {
     padding: 0;
     width: 90%;
     margin: auto;
-    text-overflow: ellipsis;
 }
 
 .links a {
@@ -87,18 +86,20 @@ i {
 
 .links a:hover {
     text-decoration:none !important;
-    
 }
 
 
 .links li {
-    list-style-type:none;           
+    list-style-type:none;
     border-bottom: 1px solid #A9A9A9;
     padding-left: 20px;
     height: 25px;
     line-height: 25px;
     vertical-align:middle;
     text-align:left;
+    text-overflow: ellipsis;
+    white-space:nowrap;
+    overflow: hidden;
 }
 
 .links li:before {
